[package]
name = "dc-bot"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
poise = "0.5.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "process", "io-std"] }
tokio-util = { version="0.7.4", features = ["codec"]}
base64 = "0.13.0"
rsa = "0.7.2"
sha3 = { version = "0.10.6", features = ["oid"] }
build-time = "0.1.0"

[features]
default = ["random", "stdio_tests", "modal_tests", "tools", "dcbothub"]
random = []
stdio_tests = []
modal_tests = ["handler"]
tools = ["handler"]
dcbothub = []
handler = []