[package]
name = "ctrl-bot"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.43.1", features = [
    "rt-multi-thread",
    "process",
    "io-std",
] }
tokio-util = { version = "0.7.13", features = ["codec"] }
base64 = "0.22.1"
rsa = "0.9.7"
sha3 = { version = "0.10.8", features = ["oid"] }
build-time = "0.1.3"
poise = "0.6.1"

[features]
default = ["dcbothub", "tools", "shell"]
random = []
stdio_tests = []
modal_tests = ["handler"]
tools = ["handler"]
dcbothub = []
handler = []
shell = []
